--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,10 +1,11 @@
 # Changes here will be overwritten by Copier
-_commit: v6.4.0
+_commit: v7.0.0
 _src_path: gh:eccenca/cmem-plugin-template
 author_mail: cmempy-developer@eccenca.com
 author_name: eccenca GmbH
 github_page: https://github.com/eccenca/cmem-plugin-sparql-anything
-project_description: 'Query file to generate knowledge graph'
+project_description: Query anything with SPARQL to construct Knowledge Graphs.
 project_slug: sparql-anything
+project_type: plugin
 pypi: true
 
