--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,4 +1,7 @@
 # https://taskfile.dev
+#
+# This is a generated file. We dot not suggest to edit it.
+# Instead, create a file `TaskfileCustom.yml` and add your additions there.
 ---
 version: '3'
 
@@ -10,12 +13,15 @@ dotenv: ['.copier-answers.env', '.env']
     - check:prepare
 
 vars:
-  PACKAGE: cmem_plugin_$project_slug
+  PACKAGE: $package_dir
   DIST_DIR: dist
 
 includes:
   custom:
     taskfile: ./TaskfileCustom.yaml
+    optional: true
+  plugin:
+    taskfile: .tasks-plugin.yml
     optional: true
 
 tasks:
@@ -43,6 +49,10 @@ tasks:
       Check poetry versioning plugin. Currently not under Windows
     run: once
     preconditions:
+      - sh: '[ -d .git ]'
+        msg: >
+          Your newly created project directory needs to be initialized
+          as a git repository.
       - sh: '[[ {{.PDV_VERSION}} > {{.PDV_VERSION_MIN}} ]]'
         msg: >
           This project needs the poetry-dynamic-versioning
@@ -163,15 +173,6 @@ tasks:
       XML_PARAMS: --output-format junit --output-file {{.JUNIT_FILE}}
 
   # }}}
-  # {{{ build and deploy tasks
-
-  deploy:
-    desc: Install plugin package in Corporate Memory
-    deps:
-      - build
-    cmds:
-      - cmemc admin workspace python install dist/*.tar.gz
-      - cmemc admin workspace python list-plugins
 
   build:
     desc: Build a tarball and a wheel package
@@ -181,6 +182,4 @@ tasks:
       - poetry:check
     cmds:
       - poetry build
-
-# }}}
 
