--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,10 @@
 name = "cmem-plugin-sparql-anything"
 version = "0.0.0"
 license = "Apache-2.0"
-description = "Query file to generate knowledge graph"
+description = "Query anything with SPARQL to construct Knowledge Graphs."
 authors = ["eccenca GmbH <cmempy-developer@eccenca.com>"]
 classifiers = [
-    "Development Status :: 4 - Beta",
-    "Environment :: Plugins",
-    "Topic :: Software Development :: Libraries :: Python Modules"
+    "Development Status :: 4 - Beta","Environment :: Plugins",
 ]
 readme = "README-public.md"
 keywords = [
@@ -15,13 +13,15 @@ keywords = [
 ]
 homepage = "https://github.com/eccenca/cmem-plugin-sparql-anything"
 
-[tool.poetry.dependencies]
-# if you need to change python version here, change it also in .python-version
+[tool.poetry.dependencies]# if you need to change python version here, change it also in .python-version
 python = "^3.11"
 
 [tool.poetry.dependencies.cmem-plugin-base]
 version = "^4.7.0"
 allow-prereleases = false
+
+[tool.poetry.group.dev.dependencies.cmem-cmemc]
+version = "^24.2.0"
 
 [tool.poetry.group.dev.dependencies]
 genbadge = {extras = ["coverage"], version = "^1.1.1"}
